feat: integration of lr to plane delimitation